@@ -19,7 +19,7 @@
 # gnulib modules used by this package.
 gnulib_modules="
     acl alloca btowc extensions getline getopt gettext localcharset
-    mbrlen mbrtowc memchr mbsinit mkstemp obstack pathmax rename
+    mbrlen mbrtowc memchr mbsinit mkostemp obstack pathmax rename
     selinux-h snprintf stdbool stat-macros strerror strverscmp ssize_t
     unlocked-io vasnprintf verify wcrtomb wctob"
 
