@@ -5,12 +5,15 @@ alloca.c
 alloca.h
 alloca.in.h
 asnprintf.c
+basename-lgpl.c
 basename.c
 btowc.c
 c-ctype.c
 c-ctype.h
+canonicalize-lgpl.c
 config.charset
 copy-acl.c
+dirname-lgpl.c
 dirname.c
 dirname.h
 errno.h
@@ -24,6 +27,7 @@ float+.h
 float.h
 float.in.h
 getdelim.c
+getfilecon.c
 getline.c
 getopt.c
 getopt.h
@@ -35,16 +39,23 @@ gettext.h
 gettimeofday.c
 gnulib.mk
 intprops.h
+langinfo.h
+langinfo.in.h
 localcharset.c
 localcharset.h
 lstat.c
+malloc.c
+malloca.c
+malloca.h
+malloca.valgrind
 mbrlen.c
 mbrtowc.c
 mbsinit.c
 memchr.c
 memcmp.c
 memmove.c
-mkstemp.c
+mkostemp.c
+nl_langinfo.c
 obstack.c
 obstack.h
 pathmax.h
@@ -56,6 +67,7 @@ quote.c
 quote.h
 quotearg.c
 quotearg.h
+readlink.c
 realloc.c
 ref-add.sed
 ref-add.sin
@@ -68,6 +80,8 @@ regex_internal.c
 regex_internal.h
 regexec.c
 rename.c
+rmdir.c
+same-inode.h
 se-context.h
 se-context.in.h
 se-selinux.h
@@ -76,8 +90,11 @@ set-mode-acl.c
 size_max.h
 snprintf.c
 stat-macros.h
+stat.c
 stdbool.h
 stdbool.in.h
+stddef.h
+stddef.in.h
 stdint.h
 stdint.in.h
 stdio-write.c
@@ -100,6 +117,8 @@ sys_time.h
 sys_time.in.h
 tempname.c
 tempname.h
+time.h
+time.in.h
 unistd.h
 unistd.in.h
 unlocked-io.h
