@@ -1,3 +1,12 @@
+2010-07-16  Paolo Bonzini  <bonzini@gnu.org>
+
+	* autoboot.conf (gnulib_modules): Replace mkstemp with mkostemp.
+	* bootstrap.sh.in: Compile mkostemp.c instead of mkstemp.c.
+	* gnulib: Update.
+	* NEWS: Mention change.
+	* sed/utils.c (ck_mkstemp): Use mkostemp to work around Cygwin
+	oddity.  Reported by Stepan Kasal.
+
 2009-11-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* doc/sed.texi (Extended Commands): Document F command.
